refactor: modernize locale handling, optimize process wait, and automate jar versioning in README via release script